fix: apply Fase 1 (C1-C8) + Fase 2 (H1-H16) + Fase 3 (M1-M18) from code review
C1: ServersDatService compression NONE->GZIP

C2: Fix arch mapping x86->x64 in RuleEvaluator + ArgumentRules

C3: ArgumentRules default allow (was deny)

C4: Fix Linux CI icon copy path

C5: Fix website GitHub URLs keylertamayo->MeaCore-Enterprise

C6+C7: AutoUpdateService Linux pkg mgr detection + relaunch binary path

C8: Classpath response file for Windows 8191-char limit

H1-H5: Remove dead JVM flags + no-op LanguageFilterAgent

H6+H7+H16: Thread pool, ConcurrentHashMap, install race guard in LauncherApp

H8+H9+H15: CPU affinity BigInteger, macOS taskset fix, Java 21 regex

H10+H11: ModloaderInstallerService XML parser + version sort

H12-H14: AutoUpdateService GitHub logging + Platform.exit

M1+M6+M8: Desktop guard, buffer 8M->256K, mirror failure logging